# unthinking

./: .gitignore  AGENTS.md  Makefile  README.md  TASKS.md  WORKFLOW.md  session_log.md  thoughts.md  workflow.md
analysis/: 00_faith_and_fate.md  01_gsm_symbolic.md  02_cot_without_prompting.md  03_illusion_of_thinking.md  04_thinking_isnt_illusion.md  05_deepseek_r1.md  07_s1_simple_scaling.md  08_measuring_faithfulness.md  11_comment_agentic_gap.md  11_limits_innate_planning.md  13_emergence_strategic_reasoning.md  14_cot_wild_not_faithful.md  15_interplay_pretraining_rl.md  16_reasoning_models_until_they_dont.md  17_illusion_of_insight.md  18_llms_imitate_logical_reasoning.md  19_comprehension_without_competence.md  20_frontier_llms_still_struggle.md  21_illusions_of_reflection.md  22_illusion_diminishing_returns.md  23_can_llm_graph_reasoning_generalize.md  24_beyond_memorization_toc.md  25_reasoning_model_superior_judge.md  26_no_free_lunch_internal_feedback.md  27_neuro_symbolic_ai_reasoning.md  28_multilingual_latent_reasoners.md  29_planning_generalization_gap.md  30_cot_faithfulness_unlearning.md  31_omega_llm_reasoning_outside_box.md  32_emergent_hierarchical_reasoning.md  33_algorithmic_primitives_compositional_geometry.md  34_emergent_symbolic_mechanisms.md  35_how_llms_learn_to_reason_complex_network.md  36_reasoning_beyond_cot_latent_mode.md  PAPER_GRAPH.md  REBUTTALS.md  SYNTHESIS.md  case.md  data.md  memento.md  (+6 more)
docs/: SPECS.md  (+6 more)
experiments/attractor_states/: __init__.py  __main__.py  classify.py  conversation.py  models.py  output.py  protocol.md  pyproject.toml  results.md
experiments/attractor_states/results/: gpt-4o_20260308_204625.json
experiments/attractor_states/src/attractor_states/: __init__.py  __main__.py  analyze.py  classify.py  conversation.py  models.py  output.py
experiments/decoding_ablation/: PROTOCOL.md  protocol.md  pyproject.toml
(+558 files in other folders)
