[project]
name = "attractor-states"
version = "0.1.0"
description = "Attractor States Experiment: Distribution Chaos"
readme = "protocol.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
attractor = "attractor_states.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/attractor_states"]
